--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 
 
       </section>
+      <div id="chart">
+      <canvas id="productChart" width="800px" height="800px"></canvas>
+      </div>
       <aside>
 
       </aside>
@@ -65,6 +68,7 @@
     <footer>
       <p>Footer for page</p>
     </footer>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@3.1.1/dist/chart.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
